# item-catalog

./: .gitignore  Restaurant_System_DFD.md  app.py  models.py  pyproject.toml  requirements.txt  restaurant.db.bak
.github/workflows/: deploy.yml
instance/: restaurant.db
static/: bootstrap.css  style.css
templates/: admin_dashboard.html  admin_menu.html  admin_restaurants.html  base.html  index.html  login.html  menu.html  restaurants.html  signup.html
