[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "item-catalog"
version = "1.0.0"
description = "A restaurant and menu item catalog application built with Flask"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]

dependencies = [
    "Flask>=3.0.0",
    "Flask-SQLAlchemy>=3.1.1",
    "Flask-Login>=0.6.3",
    "Werkzeug>=3.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-flask>=1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/item-catalog"
Repository = "https://github.com/yourusername/item-catalog"

[tool.setuptools]
packages = ["app"]
